Adicionar propriedades de CSS, e alterações HTML

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div>
-        <h3>Advinhe o nome do personagem</h3>
-        <input placeholder="Digite o nome" type="text">
+        <h3>!!Adivinhe o nome do personagem!!</h3>
+        <input autofocus placeholder="Digite o nome" type="text">
         <button id="start">Iniciar</button>
         <button id="tent">Tentar</button>
 
